--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Install dependencies
       run: npm install
       
-    - name: Build
+    - name: Build React app
       run: npm run build
       
     - name: Setup Pages
